--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,41 @@
 version: 2.1
 
+
 orbs:
-  slack: circleci/slack@4.9.3
+ slack: circleci/slack@4.9.3
+
 
 jobs:
-  build:
-    docker:
-      - image: cimg/base:current
-    steps:
-      - checkout
-      - run:
-          name: Mock build step
-          command: |
-            echo "Starting the mock build..."
-            sleep 10
-            echo "Build Complete."
-      - slack/notify:
-          event: pass
-          template: basic_success_1
-          custom: |
-            {
-              "blocks": [
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdown",
-                    "text": "*Mock Build Completed Successfully - Miguel Silva*"
-                  }
-                }
-              ]
-            }
-
+ build:
+   docker:
+     - image: cimg/base:current
+   steps:
+     - checkout
+     - run:
+         name: Mock Build Step
+         command: |
+           echo "Starting the mock build..."
+           sleep 10
+           echo "Build complete."
+     - slack/notify:
+         event: pass
+         template: basic_success_1
+         custom: |
+           {
+             "blocks": [
+               {
+                 "type": "section",
+                 "text": {
+                   "type": "mrkdwn",
+                   "text": "*Mock Build Completed Successfully [please write your name]*"
+                 }
+               }
+             ]
+           }
 
 
 workflows:
-  version: 2
-  simple-build-notify:
-    jobs:
-      - build:
+ version: 2
+ simple-build-notify:
+   jobs:
+     - build:
