--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - slack/notify:
           event: pass
           template: basic_success_1
-          custom: >
+          custom: |
             {
               "blocks": [
                 {
@@ -29,10 +29,11 @@ jobs:
                 }
               ]
             }
+            
 workflows:
   version: 2
   simple-build-notify:
     jobs:
-      - build: null
-        context:
-          - Workshop
+      - build:
+          context:
+            - Workshop
